<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="126dp"
            android:layout_height="42dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextNumber1"
            android:hint="@string/enter_number"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toEndOf="@+id/editTextNumber2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" />

    <Button
            android:text="@string/add"
            android:layout_width="117dp"
            android:layout_height="48dp"
            android:id="@+id/add"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
            android:layout_marginTop="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/subtract" />

    <Button
            android:text="@string/multiply"
            android:layout_width="117dp"
            android:layout_height="48dp"
            android:id="@+id/multiply"
            app:layout_constraintTop_toBottomOf="@+id/add"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/divide" />

    <Button
            android:text="@string/divide"
            android:layout_width="117dp"
            android:layout_height="48dp"
            android:id="@+id/divide"
            app:layout_constraintTop_toBottomOf="@+id/subtract"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toEndOf="@+id/multiply"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" />

    <Button
            android:text="@string/subtract"
            android:layout_width="117dp"
            android:layout_height="48dp"
            android:id="@+id/subtract"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber1"
            android:layout_marginTop="52dp"
            app:layout_constraintStart_toEndOf="@+id/add"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" />

    <EditText
            android:layout_width="126dp"
            android:layout_height="42dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextNumber2"
            android:hint="@string/enter_number"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toStartOf="@+id/editTextNumber1"
            android:layout_marginEnd="164dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_calculator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.037"
            android:id="@+id/textView" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="20dp"
            android:orientation="horizontal" />


</androidx.constraintlayout.widget.ConstraintLayout>